Warning fix for Tile.java and ChessGame.java